style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style: none;
}

html {
  font-size: 62.5%;
}

body {
  font-family: "Inter", sans-serif;
  line-height: 1;
  font-weight: 400;
  color: #555;
}

body.open-modal {
  height: 100vh;
  overflow: hidden;
}

:root {
  --color-tint: #fdf2e9;
  --primary-white: #fff;
  --font-family-secondary: "Playfair Display";
  --font-family-primary: "Poppins";
}


/* mobile hamburger functionality */
.sidebar-bg-image{
  display: flex;
  justify-content: space-between;
}
  .sidebar-img-left{
    width: 26.4rem;
    
    
  }
  .sidebar-close-btn{
    padding: 2.4rem 2rem 0  0;
    cursor: pointer;
  }
  .sidebar-close-btn img{
    width: 2.5rem;
    height: 2rem;
  }
  .sidebar-img-left img{
    width: 100%;
    
    
  }

.header-menu-container{
  position: relative;
}

.sidebar-toggle { 
  height:100vh;
  width:100vw;
  background:rgba(255, 255, 255, 1);
  position: absolute;
 
 
}
.toggler-bottom-img{
  margin-top: 8.2rem;
  height: 20rem;
  
}
.toggler-bottom-img img{
  width: 100%;
 
 
}
.sidebar-toggle:hover {

 
}
.sidebar-toggle-links{
  display: flex;
  flex-direction: column;
  gap: 1.2rem;
  left: 50%;
  text-align: center;
  margin-top: 4rem;
}


.sidebar-toggle-links{
  
   list-style-type: none;
}
.sidebar-toggle-links li a{
  font-family: 'Poppins';
font-style: normal;
font-weight: 500;
font-size: 2rem;
line-height: 300%;
color: #000000;
cursor: pointer;
}

a {
  text-decoration: none;
}
.toggleBtn{
  display: none;
}

/* mobile hamburger functionality */





/* PADDING AND MARGIN SECTION */
.margin-form-mobile {
  margin-top: 0.8rem;
}

.margin-lg {
  margin-top: 5.6rem;
}

.margin-sm {
  margin-top: 2rem;
}

.margin-sm-t {
  margin-top: 2.1rem;
}

.margin-xsm {
  margin-top: 1.6rem;
}

.margin-md {
  margin-top: 3rem;
}

.margin-md-sm {
  margin-top: 3.2rem;
}

.margin-md-sm-b {
  margin-bottom: 3.2rem;
}

.margin-xmd {
  margin-top: 4rem;
}

.margin-xmd-b {
  margin-bottom: 4rem;
}

.margin-xmd-t {
  margin-top: 4rem;
}

.margin-sm-b {
  margin-bottom: 2rem;
}

.padding-sm {
  padding-left: 1.6rem;
}

.padding-md {
  padding: 2rem;
}

.margin-xl-t {
  margin-top: 6.4rem;
}

.margin-xsm-t {
  margin-top: 0.8rem;
}

/* PADDING AND MARGIN SECTION */

.container {
  padding: 0 2.4rem;
}

.grid {
  display: grid;
}

.grid--2-cols {
  grid-template-columns: repeat(2, 1fr);
}

.grid--3-cols {
  grid-template-columns: repeat(3, 1fr);
}

.grid--4-cols {
  grid-template-columns: repeat(4, 1fr);
}

.grid--5-cols {
  grid-template-columns: repeat(5, 1fr);
}

.grid-center-vertically {
  align-items: center;
}

.link-helper {
  display: block;
  text-decoration: none;
}

/* nav-section  */
.nav-section {
  width: 100%;
  align-items: center;
  justify-content: space-between;
}

.nav-hamburger {
  justify-self: flex-end;
  margin-right: 2.5rem;
  cursor: pointer;
}

.btn {
  outline: none;
  border: none;
}

.btn-header {
  width: 100%;
  background: #1a2236;
  transition: all 0.4s;
}

.btn-header:hover {
  font-family: var(--font-family-primary);
  font-style: normal;
  font-weight: 500;
  font-size: 1.8rem;
  line-height: 27px;
  background: #e5e5e5;
  text-align: center;
  color: #1a2236;
  border: 1px solid #1a2236;
}

.btn-header:visited {
  font-family: var(--font-family-primary);
  font-style: normal;
  font-weight: 500;
  font-size: 1.8rem;
  line-height: 27px;
  background: #e5e5e5;
  text-align: center;
  color: #1a2236;
  border: 2px solid #1a2236;
}

/* section Header Description */
.header-description {
  padding: 0 1.6rem;
}

.header-description-name {
  font-family: var(--font-family-secondary);
  font-weight: 500;
  font-size: 5.2rem;
  line-height: 100%;
  color: #1a2236;
}

.header-description-text {
  font-family: var(--font-family-primary);
  font-style: normal;
  font-weight: 500;
  font-size: 1.5rem;
  line-height: 2rem;
  letter-spacing: -0.01em;
  color: #1a2236;
}

.about-section-cv a {
  font-family: var(--font-family-primary);
  font-style: normal;
  font-weight: 500;
  font-size: 1.6;
  line-height: 1.5;
  text-align: center;
  color: #fff;
  text-decoration: none;
}

.btn-header a {
  display: block;
  text-decoration: none;
  font-family: var(--font-family-primary);
  font-style: normal;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 24px;
  text-align: center;
  padding: 1rem 0;
  color: #fff;
}

.view-project a {
  color: #fff;
  font-family: var(--font-family-primary);
  font-style: normal;
  font-weight: 500;
  font-size: 3rem;
  line-height: 3rem;
  text-decoration: none;
}

.btn-header:hover a {
  color: #1a2236;
  font-weight: bold;
}

.box-image {
  width: auto;
  height: 16rem;
  background-image: url("./images/image_geometry_2.png");
}

.project-section-title {
  font-family: var(--font-family-secondary);
  font-style: normal;
  font-weight: 400;
  font-size: 5rem;
  line-height: 100%;
  color: #1a2236;
}

.project-description-container {
  flex-direction: column;
}

.project-description {
  padding: 2rem;
  background: #1a2236;
}

.project-name {
  font-family: var(--font-family-primary);
  font-weight: 400;
  font-size: 2.5rem;
  line-height: 1.5;
  color: #fff;
}

.project-features {
  display: flex;
  align-items: center;
  gap: 2rem;
}

.btn-feature {
  font-family: var(--font-family-primary);
  font-style: normal;
  font-weight: 400;
  font-size: 1.2rem;
  line-height: 80%;
  color: #1a2236;
  background: #98dede;
  padding: 0.6rem 1rem;
}

.project-img img {
  width: 100%;
}

.view-project {
  display: inline-flex;
  align-items: center;
  gap: 1.2rem;
  text-align: center;
  border: 1px solid #fff;
  padding: 1.2rem;
}

.btn-header a:hover {
  color: #1a2236;
}

.icon {
  color: #fff;
  width: 3rem;
  height: 3rem;
}

/* ******************* about section ******************** */

.about-section {
  padding: 4rem;
}

.about-section-title {
  font-family: var(--font-family-secondary);
  font-style: normal;
  font-weight: 400;
  font-size: 50px;
  line-height: 100%;
  color: #1a2236;
}
/* ... */

